[tool.poetry]
name = "pantograph"
version = "0.1.0"
description = ""
authors = ["okonomichiyaki <74801510+okonomichiyaki@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
python-levenshtein = "^0.20.9"
google-cloud-vision = "^3.3.1"
rapidfuzz = "^2.13.7"
flask = "^2.2.2"
flask-httpauth = "^4.7.0"
gunicorn = "^20.1.0"
flask-socketio = "^5.3.2"
gevent = "^22.10.2"
gevent-websocket = "^0.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
